--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,45 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'com.google.protobuf' version '0.9.1'
+    id 'com.google.protobuf' version '0.9.4'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group = 'example.armeria'
+version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation "com.linecorp.armeria:armeria:1.21.0"
-    implementation "com.linecorp.armeria:armeria-grpc:1.21.0"
-    runtimeOnly 'io.grpc:grpc-netty-shaded:1.52.1'
-    implementation 'io.grpc:grpc-protobuf:1.52.1'
-    implementation 'io.grpc:grpc-stub:1.52.1'
-    compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
-    // Logging
-    runtimeOnly "ch.qos.logback:logback-classic:1.2.11"
-    implementation 'ch.qos.logback:logback-classic:1.2.11'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    ["armeria",
+     "armeria-grpc"
+    ].each {
+        implementation "com.linecorp.armeria:${it}:1.25.2"
+    }
+
+    runtimeOnly "io.grpc:grpc-netty-shaded:1.58.0"
+    implementation "io.grpc:grpc-protobuf:1.58.0"
+    implementation "io.grpc:grpc-stub:1.58.0"
+    compileOnly "org.apache.tomcat:annotations-api:6.0.53" // necessary for Java 9+
+
+    implementation "com.google.protobuf:protobuf-java-util:3.24.3"
+
+    implementation "ch.qos.logback:logback-classic:1.4.7"
+    implementation "org.slf4j:slf4j-api:2.0.7"
+
+    testImplementation platform("org.junit:junit-bom:5.9.1")
+    testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation "org.assertj:assertj-core:3.11.1"
 }
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.21.7"
+        artifact = "com.google.protobuf:protoc:3.24.3"
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.52.1'
+            artifact = "io.grpc:protoc-gen-grpc-java:1.58.0"
         }
     }
     generateProtoTasks {
